test/tests/fuzz/Fuzz2.expected
Fuzz2.frost:7:12: error: reference to method '<' cannot be used as type 'frost.core.Bit'. None of the following methods match this type:
    function frost.core.Int.<(other:frost.core.Int8):frost.core.Bit:343:1 (cannot be an instance of frost.core.Bit)
    function frost.core.Int.<(other:frost.core.Int16):frost.core.Bit:346:1 (cannot be an instance of frost.core.Bit)
    function frost.core.Int.<(other:frost.core.Int32):frost.core.Bit:349:1 (cannot be an instance of frost.core.Bit)
    function frost.core.Int.<(other:frost.core.Int64):frost.core.Bit:352:1 (cannot be an instance of frost.core.Bit)
    function frost.core.Int.<(other:frost.core.Int):frost.core.Bit:356:1 (cannot be an instance of frost.core.Bit)
    function frost.core.Int.<(other:frost.core.UInt8):frost.core.Bit:359:1 (cannot be an instance of frost.core.Bit)
    function frost.core.Int.<(other:frost.core.UInt16):frost.core.Bit:362:1 (cannot be an instance of frost.core.Bit)
    function frost.core.Int.<(other:frost.core.UInt32):frost.core.Bit:365:1 (cannot be an instance of frost.core.Bit)
    function frost.core.Int.<(other:frost.core.UInt):frost.core.Bit:368:1 (cannot be an instance of frost.core.Bit)
Fuzz2.frost:7:15: error: not a statement
2 errors
